# robot_descriptions

./: .gitignore  .gitmodules  README.md
common/dexhands/brainco_description/: CMakeLists.txt  README.md  package.xml
common/dexhands/brainco_description/urdf/: brainco-lefthand-URDF-V2.csv
common/dexhands/brainco_description/xacro/: hand.xacro  revo2.xacro
common/gripper/inspire_description/: README.md  package.xml
common/gripper/inspire_description/xacro/: EG2-4C2.xacro  gripper.xacro
common/robot_common_launch/: README.md  package.xml  setup.cfg  setup.py
common/robot_common_launch/config/cartographer/: cartographer.lua  cartographer.rviz
common/robot_common_launch/config/nav2/: default.yaml  ekf.yaml  nav2_params.yaml
common/robot_common_launch/config/rviz/: gripper.rviz  hardware_test.rviz
common/robot_common_launch/config/slam_toolbox/: mapper_params_online_async.yaml
common/robot_common_launch/launch/control/: controller_manager.launch.py  diff_drive.launch.py  hardware_visualize.launch.py
common/robot_common_launch/launch/manipulation/: manipulator_ocs2.launch.py
common/robot_common_launch/launch/navigation/: amr_rctk.launch.py  cartographer.launch.py  nav2.launch.py  navigation.launch.py  navigation_cartographer.launch.py  navigation_slam.launch.py
common/robot_common_launch/launch/visualize/: gripper.launch.py  hand.launch.py  humanoid.launch.py  manipulator.launch.py  visualize.launch.py
common/robot_common_launch/resource/: robot_common_launch
common/robot_common_launch/robot_common_launch/: __init__.py
common/robot_common_launch/robot_common_launch/common/: __init__.py  controller_utils.py  launch_utils.py  robot_utils.py
common/robot_common_launch/worlds/: bullet.sdf  warehouse.sdf
common/robot_visualize_config/: CMakeLists.txt  README.md  package.xml
common/robot_visualize_config/config/: hand.rviz  manipulator.rviz  unitree_guide.rviz  urdf.rviz
common/robot_visualize_config/launch/: gripper.launch.py  hand.launch.py  humanoid.launch.py  manipulator.launch.py  manipulator_ocs2.launch.py  visualize.launch.py
humanoid/ARX/arx_lift_description/: CMakeLists.txt  README.md  package.xml
humanoid/ARX/arx_lift_description/meshes/: base_link.mtl  h_base.mtl  h_link1.mtl  h_link2.mtl  lift.mtl
humanoid/ARX/arx_lift_description/urdf/: arx_lift.urdf  arx_lift_r5.urdf
humanoid/ARX/arx_lift_description/xacro/: body.xacro  mobile_base.xacro  robot.xacro
humanoid/Agibot/agibot_g1_description/: CMakeLists.txt  README.md  package.xml
humanoid/Agibot/agibot_g1_description/urdf/: agibot_g1.urdf
humanoid/Agibot/agibot_g1_description/xacro/: 120s_camera_stand.xacro  component.xacro  g1_arm.xacro  g1_base.xacro  gazebo.xacro  robot.xacro
humanoid/Airbot/airbot_mmk2_description/: README.md  package.xml
humanoid/Airbot/airbot_mmk2_description/meshes/: base_link.mtl  drive_wheel.mtl  head_pitch.mtl  head_yaw.mtl  slide.mtl  support_wheel.mtl
humanoid/Airbot/airbot_mmk2_description/urdf/: airbot_mmk2.urdf
humanoid/Airbot/airbot_mmk2_description/xacro/: mmk2_base.xacro  robot.xacro
humanoid/Astribot/astribot_s1_description/: CMakeLists.txt  LICENSE  README.md  package.xml
humanoid/Astribot/astribot_s1_description/urdf/: astribot_s1.urdf
humanoid/Astribot/astribot_s1_description/xacro/: base.xacro  gripper.xacro  robot.xacro  s1_arm.xacro  s1_gripper.xacro
humanoid/EngineAI/pm01_description/: README.md  package.xml
humanoid/Galaxea/galaxea_r1pro_description/: CMakeLists.txt  README.md  package.xml
humanoid/Galaxea/galaxea_r1pro_description/urdf/: galaxea_r1pro.urdf
humanoid/Galaxea/galaxea_r1pro_description/xacro/: pro_arm.xacro  realsense.xacro  robot.xacro
humanoid/Realman/aidal_description/: README.md  package.xml
humanoid/Realman/aidal_description/xacro/: robot.xacro
humanoid/Unitree/unitree_g1_description/: CMakeLists.txt  README.md  package.xml
humanoid/Unitree/unitree_g1_description/urdf/: unitree_g1.urdf  unitree_g1_revo2.urdf
humanoid/Unitree/unitree_g1_description/xacro/: arm.xacro  body.xacro  hand.xacro  leg.xacro  robot.xacro
manipulator/ARX/arx5_description/: README.md  package.xml
manipulator/ARX/arx5_description/urdf/: arx5.urdf  arx5_r5.urdf
manipulator/ARX/arx5_description/xacro/: R5.xacro  X5.xacro
manipulator/AgileX/agilex_aloha_description/: README.md  package.xml
manipulator/AgileX/agilex_aloha_description/urdf/: agilex_aloha.urdf
manipulator/AgileX/agilex_aloha_description/xacro/: aloha_split.xacro  ranger_mini.xacro
manipulator/AgileX/piper_description/: README.md  package.xml
manipulator/AgileX/piper_description/urdf/: piper.urdf
manipulator/AgileX/piper_description/xacro/: Piper.xacro  master.xacro  robot.xacro  slave.xacro
manipulator/Airbots/airbot_mmk2_description/: CMakeLists.txt  README.md  package.xml
manipulator/Airbots/airbot_mmk2_description/meshes/: base_link.mtl  slide_link.STL
manipulator/Airbots/airbot_mmk2_description/urdf/: airbot_mmk2.urdf
manipulator/Airbots/airbot_mmk2_description/xacro/: mmk2_base.xacro
manipulator/Dobot/cr5_description/: CMakeLists.txt  README.md  package.xml
manipulator/Dobot/cr5_description/launch/: dobot_bringup_ros2.launch.py
manipulator/Dobot/cr5_description/urdf/: cr5.urdf
manipulator/Dobot/cr5_description/xacro/: arm.xacro  grippers.xacro  robot.xacro
manipulator/Galaxea/galaxea_a1_description/: README.md  package.xml
manipulator/Galaxea/galaxea_r1lite_description/: CMakeLists.txt  README.md  package.xml
manipulator/LeRobot/so_arm_description/: README.md  package.xml
manipulator/OpenArm/openarm_description/: CMakeLists.txt  README.md  package.xml
manipulator/Ragtime-Lab/panthera_description/: README.md  package.xml
manipulator/Realman/rm65_description/: README.md  package.xml
quadruped/deep_robotics/x30_description/: README.md  package.xml
quadruped/unitree/aliengo_description/: README.md  package.xml
quadruped/unitree/b2_description/: README.md  package.xml
quadruped/unitree/go1_description/: README.md  package.xml
quadruped/unitree/go2_description/: README.md  package.xml
(+404 files in other folders)
