<?xml version="1.0"?>
<package format="3">
  <name>robot_common_launch</name>
  <version>0.0.0</version>
  <description>Common launch utilities for robots</description>

  <license>BSD-3</license>

  <maintainer email="biao876990970@hotmail.com">Huang Zhenbiao</maintainer>

  <depend>camera_models</depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>rclpy</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
