<?xml version="1.0"?>
<package format="2">
  <name>robot_visualize_config</name>
  <version>0.0.0</version>
  <description>The common visualize config files for robots</description>

  <license>BSD-3</license>

  <maintainer email="biao876990970@hotmail.com">Huang Zhenbiao</maintainer>

  <depend>camera_models</depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
