<?xml version="1.0"?>
<package format="2">
    <name>brainco_description</name>
    <version>0.0.0</version>
    <description>URDF Description package for brainco dexhands</description>

    <maintainer email="biao876990970@hotmail.com">Huang Zhenbiao</maintainer>
    <license>TODO</license>

    <exec_depend>robot_common_launch</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>
