<package format="2">
  <name>inspire_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for Inspire Grippers</p>
    <p>This package contains configuration data, 3D models and launch files
      for EG2 gripper
    </p>
  </description>

  <maintainer email="biao876990970@hotmail.com">Huang Zhenbiao</maintainer>
  <license>TODO</license>

  <exec_depend>robot_common_launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>