<?xml version="1.0"?>
<package format="2">
    <name>arx_lift_description</name>
    <version>1.0.0</version>
    <description>
        <p>URDF Description package for ARX Lift</p>
        <p>This package contains configuration data, 3D models and launch files
            for ARX Lift robot, can choose between X5 and R5 manipulator arms.
        </p>
    </description>
    <author>TODO</author>
    <maintainer email="TODO@email.com"/>

    <license>BSD</license>

    <exec_depend>robot_common_launch</exec_depend>
    <exec_depend>arx5_description</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>