<package format="2">
  <name>astribot_s1_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for Genie G1</p>
    <p>This package contains configuration data, 3D models and launch files
      for Astribot S1 robot
    </p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com"/>
  <license>BSD</license>

  <exec_depend>robot_common_launch</exec_depend>
  <depend>brainco_description</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>