<package format="2">
  <name>galaxea_r1pro_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for Galaxea R1 Pro Robot</p>
    <p>This package contains configuration data, 3D models and launch files
      for Galaxea R1 Pro robot
    </p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com"/>
  <license>BSD</license>

  <exec_depend>robot_common_launch</exec_depend>
  <exec_depend>galaxea_r1_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>