<package format="2">
  <name>aidal_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for RM65_description</p>
    <p>This package contains configuration data, 3D models and launch files
      for Realman RM65 robot
    </p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com"/>
  <license>BSD</license>

  <exec_depend>robot_common_launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
