<?xml version="1.0"?>
<package format="2">
  <name>agilex_aloha_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for AgileX Mobile Aloha2</p>
    <p>This package contains configuration data, 3D models and launch files
      for Mobile Aloha2 robot
    </p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com"/>

  <license>BSD</license>
  <depend>piper_description</depend>
  <exec_depend>robot_visualize_config</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>