<package format="2">
  <name>airbot_mmk2_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for Airbot Play manipulator</p>
    <p>This package contains configuration data, 3D models and launch files
      for Airbot Play manipulator
    </p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com"/>
  <license>BSD</license>

  <exec_depend>robot_visualize_config</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>