<?xml version="1.0"?>
<package format="2">
    <name>cr5_description</name>
    <version>1.0.0</version>
    <description>
        <p>URDF Description package for CR5</p>
        <p>This package contains configuration data, 3D models and launch files
            for CR5 manipulator
        </p>
    </description>
    <author>TODO</author>
    <maintainer email="TODO@email.com"/>

    <license>BSD</license>

    <exec_depend>robot_common_launch</exec_depend>
    <exec_depend>changingtek_description</exec_depend>
    <exec_depend>robotiq_description</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>