<?xml version="1.0"?>
<package format="2">
  <name>so_arm_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for SO 100/101 Arm</p>
    <p>This package contains configuration data, 3D models and launch files
      for SO100/101 robot
    </p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com"/>

  <license>Apache-2.0</license>

  <exec_depend>robot_common_launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>