<package format="2">
  <name>b2_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for b2</p>
    <p>This package contains configuration data, 3D models and launch files
for b2 robot</p>
  </description>
  <author>Unitree Robotics</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>

  <exec_depend>robot_common_launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>