<?xml version="1.0"?>
<package format="2">
    <name>go1_description</name>
    <version>0.0.0</version>
    <description>The go1_description package</description>

    <maintainer email="laikago@unitree.cc">unitree</maintainer>
    <license>TODO</license>

    <exec_depend>robot_common_launch</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>