<?xml version="1.0"?>
<package format="2">
  <name>lekiwi_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for Lekiwi Project</p>
    <p>This package contains configuration data, 3D models and launch files
      for Lekiwi robot
    </p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com"/>

  <license>Apache-2.0</license>

  <exec_depend>robot_visualize_config</exec_depend>
  <exec_depend>so_arm_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>